Projet/src/Parser/src/xml.output
Terminaux inutilisés dans la grammaire

   CLOSESPECIAL
   ENCODING
   NSNAME
   NSSTART
   STARTSPECIAL


Grammaire

    0 $accept: document $end

    1 document: dtd_declarations element misc_seq_opt

    2 dtd_declarations: /* vide */
    3                 | dtd_declaration

    4 dtd_declaration: DOCTYPE NAME NAME VALUE CLOSE

    5 element: empty_element
    6        | composite_element

    7 misc_seq_opt: /* vide */
    8             | misc_seq_opt misc

    9 misc: COMMENT

   10 empty_element: START attributes SLASH CLOSE

   11 composite_element: START attributes CLOSE content END NAME CLOSE

   12 attributes: attributes NAME EQ VALUE
   13           | /* vide */

   14 content: content DATA
   15        | content element
   16        | content misc
   17        | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EQ (258) 12
SLASH (259) 10
CLOSE (260) 4 10 11
END (261) 11
CLOSESPECIAL (262)
DOCTYPE (263) 4
ENCODING (264)
VALUE (265) 4 12
DATA (266) 14
COMMENT (267) 9
NAME (268) 4 11 12
NSNAME (269)
NSSTART (270)
START (271) 10 11
STARTSPECIAL (272)


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
document (19)
    à gauche: 1, à droite: 0
dtd_declarations (20)
    à gauche: 2 3, à droite: 1
dtd_declaration (21)
    à gauche: 4, à droite: 3
element (22)
    à gauche: 5 6, à droite: 1 15
misc_seq_opt (23)
    à gauche: 7 8, à droite: 1 8
misc (24)
    à gauche: 9, à droite: 8 16
empty_element (25)
    à gauche: 10, à droite: 5
composite_element (26)
    à gauche: 11, à droite: 6
attributes (27)
    à gauche: 12 13, à droite: 10 11 12
content (28)
    à gauche: 14 15 16 17, à droite: 11 14 15 16


état 0

    0 $accept: . document $end

    DOCTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (dtd_declarations)

    document          aller à l'état 2
    dtd_declarations  aller à l'état 3
    dtd_declaration   aller à l'état 4


état 1

    4 dtd_declaration: DOCTYPE . NAME NAME VALUE CLOSE

    NAME  décalage et aller à l'état 5


état 2

    0 $accept: document . $end

    $end  décalage et aller à l'état 6


état 3

    1 document: dtd_declarations . element misc_seq_opt

    START  décalage et aller à l'état 7

    element            aller à l'état 8
    empty_element      aller à l'état 9
    composite_element  aller à l'état 10


état 4

    3 dtd_declarations: dtd_declaration .

    $défaut  réduction par utilisation de la règle 3 (dtd_declarations)


état 5

    4 dtd_declaration: DOCTYPE NAME . NAME VALUE CLOSE

    NAME  décalage et aller à l'état 11


état 6

    0 $accept: document $end .

    $défaut  accepter


état 7

   10 empty_element: START . attributes SLASH CLOSE
   11 composite_element: START . attributes CLOSE content END NAME CLOSE

    $défaut  réduction par utilisation de la règle 13 (attributes)

    attributes  aller à l'état 12


état 8

    1 document: dtd_declarations element . misc_seq_opt

    $défaut  réduction par utilisation de la règle 7 (misc_seq_opt)

    misc_seq_opt  aller à l'état 13


état 9

    5 element: empty_element .

    $défaut  réduction par utilisation de la règle 5 (element)


état 10

    6 element: composite_element .

    $défaut  réduction par utilisation de la règle 6 (element)


état 11

    4 dtd_declaration: DOCTYPE NAME NAME . VALUE CLOSE

    VALUE  décalage et aller à l'état 14


état 12

   10 empty_element: START attributes . SLASH CLOSE
   11 composite_element: START attributes . CLOSE content END NAME CLOSE
   12 attributes: attributes . NAME EQ VALUE

    SLASH  décalage et aller à l'état 15
    CLOSE  décalage et aller à l'état 16
    NAME   décalage et aller à l'état 17


état 13

    1 document: dtd_declarations element misc_seq_opt .
    8 misc_seq_opt: misc_seq_opt . misc

    COMMENT  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 1 (document)

    misc  aller à l'état 19


état 14

    4 dtd_declaration: DOCTYPE NAME NAME VALUE . CLOSE

    CLOSE  décalage et aller à l'état 20


état 15

   10 empty_element: START attributes SLASH . CLOSE

    CLOSE  décalage et aller à l'état 21


état 16

   11 composite_element: START attributes CLOSE . content END NAME CLOSE

    $défaut  réduction par utilisation de la règle 17 (content)

    content  aller à l'état 22


état 17

   12 attributes: attributes NAME . EQ VALUE

    EQ  décalage et aller à l'état 23


état 18

    9 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 9 (misc)


état 19

    8 misc_seq_opt: misc_seq_opt misc .

    $défaut  réduction par utilisation de la règle 8 (misc_seq_opt)


état 20

    4 dtd_declaration: DOCTYPE NAME NAME VALUE CLOSE .

    $défaut  réduction par utilisation de la règle 4 (dtd_declaration)


état 21

   10 empty_element: START attributes SLASH CLOSE .

    $défaut  réduction par utilisation de la règle 10 (empty_element)


état 22

   11 composite_element: START attributes CLOSE content . END NAME CLOSE
   14 content: content . DATA
   15        | content . element
   16        | content . misc

    END      décalage et aller à l'état 24
    DATA     décalage et aller à l'état 25
    COMMENT  décalage et aller à l'état 18
    START    décalage et aller à l'état 7

    element            aller à l'état 26
    misc               aller à l'état 27
    empty_element      aller à l'état 9
    composite_element  aller à l'état 10


état 23

   12 attributes: attributes NAME EQ . VALUE

    VALUE  décalage et aller à l'état 28


état 24

   11 composite_element: START attributes CLOSE content END . NAME CLOSE

    NAME  décalage et aller à l'état 29


état 25

   14 content: content DATA .

    $défaut  réduction par utilisation de la règle 14 (content)


état 26

   15 content: content element .

    $défaut  réduction par utilisation de la règle 15 (content)


état 27

   16 content: content misc .

    $défaut  réduction par utilisation de la règle 16 (content)


état 28

   12 attributes: attributes NAME EQ VALUE .

    $défaut  réduction par utilisation de la règle 12 (attributes)


état 29

   11 composite_element: START attributes CLOSE content END NAME . CLOSE

    CLOSE  décalage et aller à l'état 30


état 30

   11 composite_element: START attributes CLOSE content END NAME CLOSE .

    $défaut  réduction par utilisation de la règle 11 (composite_element)
